--- a/css/main.scss
+++ b/css/main.scss
@@ -144,6 +144,7 @@ header {
         color: #000;
         width: 100%;
         height: 100%;
+        margin: 0;
         .fa-times {
           display: block;
           position: absolute;
